<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
  <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      tools:ignore="MissingConstraints">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <TextView
          android:id="@+id/tv_state"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/waiting_for_state"
          />

      <TextView
          android:id="@+id/tv_poorsignal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/Poor_signal"
          />
      <TextView
          android:id="@+id/tv_attention"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/waiting_for_attention_signal"
          />


      <TextView
          android:id="@+id/tv_meditation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/waiting_for_meditation_signal"
          />

      <TextView
          android:id="@+id/tv_blink"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/waiting_for_blink_signal"
          />

      <TextView
          android:id="@+id/tv_alphalow"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/alphalow_value"
          />
      <TextView
          android:id="@+id/tv_alphahigh"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/alphahigh_value"
          />
      <TextView
          android:id="@+id/tv_betalow"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/betalow_value"
          />
      <TextView
          android:id="@+id/tv_betahigh"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/betahigh_value"
          />
      <TextView
          android:id="@+id/tv_gammalow"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/gammalow_value"
          />
      <TextView
          android:id="@+id/tv_gammamid"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/gammamid_value"
          />
      <TextView
          android:id="@+id/tv_delta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/delta_value"
          />
      <TextView
          android:id="@+id/tv_theta"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="1dp"
          android:text="@string/theta_value"
          />
      <Button
          android:id="@+id/btn_connect"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/connect"
          />

      <Button
          android:id="@+id/btn_start_monitoring"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/start_monitoring"
          />

      <Button
          android:id="@+id/btn_stop_monitoring"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/stop_monitoring"
          />

      <Button
          android:id="@+id/btn_disconnect"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/disconnect"
          />

      <CheckBox
          android:id="@+id/mutesound"
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:text="Mute Sound" />


    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>